# agent-skills

./: Cargo.toml  LICENSE  README.md  SPEC.md  install.sh
evals/: environment_path_resolution.md  install_idempotent.md  uninstall_cleanup.md
skill/: SKILL.md
skill/runbooks/: install-skill.md
src/: lib.rs  main.rs  manage.rs
